Реконфигурация сборочных скриптов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 server.port=8080
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url="jdbc:h2:./.database/my-database"
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url="jdbc:h2:./.database/my-database"
-spring.jpa.hibernate.ddl-auto=update
